--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
 body {
     text-align: center;
+    font-family: 'Righteous', sans-serif;
 }
