--- a/src/components/ChooseDifficulty.scss
+++ b/src/components/ChooseDifficulty.scss
@@ -6,7 +6,22 @@
 
     button {
         margin: 5px;
-        font-size: large;
+        font-size: x-large;
+        max-width: 80%;
+        width: 300px;
+        border: 3px solid black;
+        border-radius: 5px;
     }
 
+    button.standard {
+        background-color: rgb(255, 255, 100);
+    }
+
+    button.modern {
+        background-color: rgb(255, 201, 100);
+    }
+
+    button.vintage {
+        background-color: rgb(255, 100, 100);
+    }
 }
