--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,11 @@ body {
     text-align: center;
     font-family: 'Righteous', sans-serif;
 }
+
+a {
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
